# ecom-test

./: .env_example  README.md  docker-compose-local.yml  docker-compose.yml  pyproject.toml  pytest.ini  request.py
forms_app/: app.py  constants.py  fill_test_data.py  init_db.py  logs_init.py  settings.py  utils.py
forms_app/api/v1/: endpoints.py  models.py  servises.py
mongo/: entrypoint.sh
tests/: conftest.py  test_doc.py  test_form.py
